# bitbank-bot

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: trade.yml
config/: strategy.yaml
scripts/: collect_history.py  daily_report.py  run_tick.sh  tick.py  tick_ci.py
src/bitbank_bot/: __init__.py  circuit_breaker.py  client.py  config.py  discord.py  entry.py  exit.py  indicators.py  loop.py  main.py  models.py  runner.py  state_machine.py
src/bitbank_bot/backtest/: optimizer.py
src/bitbank_bot/data/: collector.py  store.py
src/bitbank_bot/exchange/: order_manager.py
src/bitbank_bot/strategy/: sizing.py
tests/: conftest.py  test_circuit_breaker.py  test_entry.py  test_exit.py  test_exit_short.py  test_indicators.py  test_state_machine.py
